# petgram

./: .gitignore  Container database.session.sql  LICENSE  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/static/: site.css
frontend/templates/: feed.html  home.html  layout.html  login.html  signup.html
petgram/: bla.py  db.py  main.py
petgram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
petgram/api/: crud.py  exceptions.py  feed.py  home.py  models.py  ping.py  schemas.py  security.py  users.py
tests/: test_main.py  test_petgram.py
