[project]
name = "petgram"
version = "0.1.0"
description = ""

[[project.authors]]
name = "Luciana Abud"
email = "luabud@microsoft.com"

[tool.setuptools]
py-modules = []

[dependencies]
python = "^3.11"
uvicorn = "^0.22"
fastapi = "^0.63.0"
requests = "^2.25.1"
asyncpg = "^0.24.0"
databases = { extras = ["postgresql"], version = "^0.4.3" }
psycopg2 = "^2.8.6"
fastapi-login = "^1.5.3"
jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
fastapi-users = "^5.1.3"

[dev-dependencies]
pytest = "^5.2"
black = { version = "^20.8b1", allow-prereleases = true }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
